--- a/data-science-1/main.ipynb
+++ b/data-science-1/main.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,17 @@
     "import numpy as np\n",
     "import scipy.stats as sct\n",
     "import seaborn as sns\n",
+    "from IPython import get_ipython\n",
     "from statsmodels.distributions.empirical_distribution import ECDF"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "#%matplotlib inline\n",
     "\n",
     "from IPython.core.pylabtools import figsize\n",
     "\n",
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,11 +89,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>normal</th>\n",
+       "      <th>binomial</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>21.986857</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>19.446943</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22.590754</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>26.092119</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19.063387</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>25.204408</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>12.006620</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>17.178733</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>21.983062</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>22.577554</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         normal  binomial\n",
+       "0     21.986857        18\n",
+       "1     19.446943        15\n",
+       "2     22.590754        14\n",
+       "3     26.092119        15\n",
+       "4     19.063387        21\n",
+       "...         ...       ...\n",
+       "9995  25.204408        22\n",
+       "9996  12.006620        24\n",
+       "9997  17.178733        17\n",
+       "9998  21.983062        23\n",
+       "9999  22.577554        25\n",
+       "\n",
+       "[10000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Sua análise da parte 1 começa aqui.\n"
+    "# Sua análise da parte 1 começa aqui.\n",
+    "dataframe"
    ]
   },
   {
@@ -108,13 +218,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "def q1():\n",
     "    # Retorne aqui o resultado da questão 1.\n",
+    "    q1_norm = np.quantile(dataframe.normal, 0.25)\n",
+    "    q2_norm = np.quantile(dataframe.normal, 0.5)\n",
+    "    q3_norm = np.quantile(dataframe.normal, 0.75)\n",
+    "\n",
+    "    q1_binom = np.quantile(dataframe.binomial, 0.25)\n",
+    "    q2_binom = np.quantile(dataframe.binomial, 0.5)\n",
+    "    q3_binom = np.quantile(dataframe.binomial, 0.75)\n",
+    "\n",
+    "    return round((q1_norm - q1_binom),3), round((q2_norm - q2_binom), 3), round((q3_norm - q3_binom), 3)\n",
+    "    \n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.31, -0.01, -0.316)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q1()"
    ]
   },
   {
@@ -139,13 +279,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "def q2():\n",
     "    # Retorne aqui o resultado da questão 2.\n",
+    "    m = dataframe.normal.mean() \n",
+    "    s = dataframe.normal.std()\n",
+    "    \n",
+    "    return np.float(round(sct.norm.cdf(m + s, loc=20, scale=4) - sct.norm.cdf(m - s, loc=20, scale=4), 3))\n",
+    "    \n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.684"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q2()"
    ]
   },
   {
@@ -171,13 +336,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "def q3():\n",
     "    # Retorne aqui o resultado da questão 3.\n",
+    "    m_binom = dataframe.binomial.mean()\n",
+    "    v_binom = dataframe.binomial.var()\n",
+    "    \n",
+    "    m_norm = dataframe.normal.mean()\n",
+    "    v_norm = dataframe.normal.var()\n",
+    "    \n",
+    "    return round((m_binom - m_norm),3), round((v_binom - v_norm),3)\n",
+    "    \n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.106, 0.22)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q3()"
    ]
   },
   {
@@ -206,11 +399,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stars = pd.read_csv(\"pulsar_stars.csv\")\n",
+    "stars = pd.read_csv(\"/home/gabriel/codenation/data-science-1/HTRU_2.csv\")\n",
     "\n",
     "stars.rename({old_name: new_name\n",
     "              for (old_name, new_name)\n",
@@ -231,11 +424,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_profile</th>\n",
+       "      <th>sd_profile</th>\n",
+       "      <th>kurt_profile</th>\n",
+       "      <th>skew_profile</th>\n",
+       "      <th>mean_curve</th>\n",
+       "      <th>sd_curve</th>\n",
+       "      <th>kurt_curve</th>\n",
+       "      <th>skew_curve</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>102.507812</td>\n",
+       "      <td>58.882430</td>\n",
+       "      <td>0.465318</td>\n",
+       "      <td>-0.515088</td>\n",
+       "      <td>1.677258</td>\n",
+       "      <td>14.860146</td>\n",
+       "      <td>10.576487</td>\n",
+       "      <td>127.393580</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>103.015625</td>\n",
+       "      <td>39.341649</td>\n",
+       "      <td>0.323328</td>\n",
+       "      <td>1.051164</td>\n",
+       "      <td>3.121237</td>\n",
+       "      <td>21.744669</td>\n",
+       "      <td>7.735822</td>\n",
+       "      <td>63.171909</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>136.750000</td>\n",
+       "      <td>57.178449</td>\n",
+       "      <td>-0.068415</td>\n",
+       "      <td>-0.636238</td>\n",
+       "      <td>3.642977</td>\n",
+       "      <td>20.959280</td>\n",
+       "      <td>6.896499</td>\n",
+       "      <td>53.593661</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>88.726562</td>\n",
+       "      <td>40.672225</td>\n",
+       "      <td>0.600866</td>\n",
+       "      <td>1.123492</td>\n",
+       "      <td>1.178930</td>\n",
+       "      <td>11.468720</td>\n",
+       "      <td>14.269573</td>\n",
+       "      <td>252.567306</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>93.570312</td>\n",
+       "      <td>46.698114</td>\n",
+       "      <td>0.531905</td>\n",
+       "      <td>0.416721</td>\n",
+       "      <td>1.636288</td>\n",
+       "      <td>14.545074</td>\n",
+       "      <td>10.621748</td>\n",
+       "      <td>131.394004</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17892</th>\n",
+       "      <td>136.429688</td>\n",
+       "      <td>59.847421</td>\n",
+       "      <td>-0.187846</td>\n",
+       "      <td>-0.738123</td>\n",
+       "      <td>1.296823</td>\n",
+       "      <td>12.166062</td>\n",
+       "      <td>15.450260</td>\n",
+       "      <td>285.931022</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17893</th>\n",
+       "      <td>122.554688</td>\n",
+       "      <td>49.485605</td>\n",
+       "      <td>0.127978</td>\n",
+       "      <td>0.323061</td>\n",
+       "      <td>16.409699</td>\n",
+       "      <td>44.626893</td>\n",
+       "      <td>2.945244</td>\n",
+       "      <td>8.297092</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17894</th>\n",
+       "      <td>119.335938</td>\n",
+       "      <td>59.935939</td>\n",
+       "      <td>0.159363</td>\n",
+       "      <td>-0.743025</td>\n",
+       "      <td>21.430602</td>\n",
+       "      <td>58.872000</td>\n",
+       "      <td>2.499517</td>\n",
+       "      <td>4.595173</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17895</th>\n",
+       "      <td>114.507812</td>\n",
+       "      <td>53.902400</td>\n",
+       "      <td>0.201161</td>\n",
+       "      <td>-0.024789</td>\n",
+       "      <td>1.946488</td>\n",
+       "      <td>13.381731</td>\n",
+       "      <td>10.007967</td>\n",
+       "      <td>134.238910</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17896</th>\n",
+       "      <td>57.062500</td>\n",
+       "      <td>85.797340</td>\n",
+       "      <td>1.406391</td>\n",
+       "      <td>0.089520</td>\n",
+       "      <td>188.306020</td>\n",
+       "      <td>64.712562</td>\n",
+       "      <td>-1.597527</td>\n",
+       "      <td>1.429475</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17897 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       mean_profile  sd_profile  kurt_profile  skew_profile  mean_curve  \\\n",
+       "0        102.507812   58.882430      0.465318     -0.515088    1.677258   \n",
+       "1        103.015625   39.341649      0.323328      1.051164    3.121237   \n",
+       "2        136.750000   57.178449     -0.068415     -0.636238    3.642977   \n",
+       "3         88.726562   40.672225      0.600866      1.123492    1.178930   \n",
+       "4         93.570312   46.698114      0.531905      0.416721    1.636288   \n",
+       "...             ...         ...           ...           ...         ...   \n",
+       "17892    136.429688   59.847421     -0.187846     -0.738123    1.296823   \n",
+       "17893    122.554688   49.485605      0.127978      0.323061   16.409699   \n",
+       "17894    119.335938   59.935939      0.159363     -0.743025   21.430602   \n",
+       "17895    114.507812   53.902400      0.201161     -0.024789    1.946488   \n",
+       "17896     57.062500   85.797340      1.406391      0.089520  188.306020   \n",
+       "\n",
+       "        sd_curve  kurt_curve  skew_curve  target  \n",
+       "0      14.860146   10.576487  127.393580   False  \n",
+       "1      21.744669    7.735822   63.171909   False  \n",
+       "2      20.959280    6.896499   53.593661   False  \n",
+       "3      11.468720   14.269573  252.567306   False  \n",
+       "4      14.545074   10.621748  131.394004   False  \n",
+       "...          ...         ...         ...     ...  \n",
+       "17892  12.166062   15.450260  285.931022   False  \n",
+       "17893  44.626893    2.945244    8.297092   False  \n",
+       "17894  58.872000    2.499517    4.595173   False  \n",
+       "17895  13.381731   10.007967  134.238910   False  \n",
+       "17896  64.712562   -1.597527    1.429475   False  \n",
+       "\n",
+       "[17897 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Sua análise da parte 2 começa aqui.\n"
+    "# Sua análise da parte 2 começa aqui.\n",
+    "stars"
    ]
   },
   {
@@ -258,13 +657,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
     "def q4():\n",
     "    # Retorne aqui o resultado da questão 4.\n",
+    "    \n",
+    "    mp = stars.loc[stars['target'] == 0]\n",
+    "    false_pulsar_mean_profile_standardized  = (mp.mean_profile - mp.mean_profile.mean()) / mp.mean_profile.std()\n",
+    "    \n",
+    "    quantis = [0.80, 0.90, 0.95]\n",
+    "    result = sct.norm.ppf(quantis, loc=0,scale=1)\n",
+    "    ecdf = ECDF(false_pulsar_mean_profile_standardized)\n",
+    "    return tuple(ecdf(result).round(3))\n",
+    "    \n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.806, 0.911, 0.959)"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q4()"
    ]
   },
   {
@@ -288,13 +716,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def q5():\n",
     "    # Retorne aqui o resultado da questão 5.\n",
+    "    \n",
+    "    mp = stars.loc[stars['target'] == 0]\n",
+    "    false_pulsar_mean_profile_standardized  = (mp.mean_profile - mp.mean_profile.mean()) / mp.mean_profile.std()\n",
+    "    \n",
+    "    q1_false = np.quantile(false_pulsar_mean_profile_standardized, 0.25)\n",
+    "    q2_false = np.quantile(false_pulsar_mean_profile_standardized, 0.5)\n",
+    "    q3_false = np.quantile(false_pulsar_mean_profile_standardized, 0.75)\n",
+    "\n",
+    "    q1_teorico = sct.norm.ppf(0.25, loc=0,scale=1)\n",
+    "    q2_teorico = sct.norm.ppf(0.50, loc=0,scale=1)\n",
+    "    q3_teorico = sct.norm.ppf(0.75, loc=0,scale=1)\n",
+    "\n",
+    "    return round((q1_false - q1_teorico),3), round((q2_false - q2_teorico), 3), round((q3_false - q3_teorico), 3)\n",
+    "    \n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.027, 0.04, -0.004)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q5()"
    ]
   },
   {
@@ -325,9 +787,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
